# imm

./: .gitignore  .travis.yml  Imm.hs  README  README.md  default.nix  flake.nix  fourmolu.yaml  imm.cabal  justfile
.github/workflows/: ci.yml
Imm/: Boot.hs  Config.hs  Core.hs  Database.hs  Dyre.hs  Error.hs  Executable.hs  Feed.hs  HTTP.hs  ImmFeed.hs  Mail.hs  Maildir.hs  Main.hs  OPML.hs  Options.hs  Types.hs  Util.hs
data/: callbacks.dhall  sendmail.dhall
example/: imm.hs
idl/: callback.json
nix/: sources.json
schema/: imm.json
src/: Prelude.hs
src/lib/: Imm.hs  Prelude.hs
src/lib/Data/Aeson/: Extended.hs
src/lib/Imm/: Aeson.hs  Boot.hs  Callback.hs  Core.hs  Database.hs  Dyre.hs  Error.hs  Feed.hs  HTTP.hs  Hooks.hs  Link.hs  Logger.hs  Options.hs  Prelude.hs  Pretty.hs  XML.hs
src/lib/Imm/Database/: Feed.hs  FeedTable.hs  JsonFile.hs
src/lib/Imm/HTTP/: Simple.hs
src/lib/Imm/Hooks/: Dummy.hs  SendMail.hs  WriteFile.hs
src/lib/Imm/Logger/: Simple.hs
src/lib/Imm/XML/: Conduit.hs  Simple.hs
src/lib/URI/ByteString/: Extended.hs
src/main/: Alternate.hs  Core.hs  Database.hs  HTTP.hs  Input.hs  Logger.hs  Main.hs  Options.hs  Output.hs  XML.hs
src/main/Database/: Async.hs  Handle.hs  ReadOnly.hs  Record.hs  SQLite.hs
src/monolith/: Main.hs
src/send-mail/: Main.hs
src/shiori/: Main.hs
src/wallabag/: Main.hs
src/write-file/: Main.hs
